Use ruby 2.0 on ubuntu 14.04
fpm-cookery is no longer installing on ruby 1.9

--- a/docker/ubuntu14.04/Dockerfile
+++ b/docker/ubuntu14.04/Dockerfile
@@ -2,7 +2,8 @@ FROM ubuntu:14.04
 MAINTAINER john.hawthorn@gmail.com
 
 RUN apt-get update
-RUN apt-get install -y ruby1.9.1 ruby1.9.1-dev build-essential git-core curl lsb-release
-RUN apt-get clean
+RUN apt-get install -y ruby2.0 ruby2.0-dev build-essential git-core curl lsb-release
+RUN ln -sf /usr/bin/ruby2.0 /usr/bin/ruby && \
+    ln -sf /usr/bin/gem2.0 /usr/bin/gem
 
 RUN gem install --no-rdoc --no-ri fpm-cookery
