Use dnf in fedora

--- a/docker/fedora/Dockerfile
+++ b/docker/fedora/Dockerfile
@@ -1,7 +1,6 @@
 FROM fedora
 MAINTAINER john.hawthorn@gmail.com
 
-RUN yum install -y --noplugins make gcc tar rpm-build git curl git rubygem-bundler ruby-devel
-RUN yum clean all
+RUN dnf install -y --noplugins make gcc tar rpm-build git curl git rubygem-bundler ruby-devel
 
 RUN gem install fpm-cookery
